--- a/src/TechReserveSystem.API/TechReserveSystem.API.csproj
+++ b/src/TechReserveSystem.API/TechReserveSystem.API.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TechReserveSystem.Domain\TechReserveSystem.Domain.csproj" />
+    <ProjectReference Include="..\TechReserveSystem.Application\TechReserveSystem.Application.csproj" />
+  </ItemGroup>
+
 </Project>
