--- a/src/TechReserveSystem.Infrastructure/TechReserveSystem.Infrastructure.csproj
+++ b/src/TechReserveSystem.Infrastructure/TechReserveSystem.Infrastructure.csproj
@@ -1,7 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\TechReserveSystem.Domain\TechReserveSystem.Domain.csproj" />
+    <ProjectReference Include="..\TechReserveSystem.Application\TechReserveSystem.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
