feat: add migrations

--- a/src/TechReserveSystem.API/appsettings.Development.json
+++ b/src/TechReserveSystem.API/appsettings.Development.json
@@ -1,8 +1,23 @@
 {
+  "ConnectionStrings": {
+    "Default": ""
+  },
+  "Settings": {
+    "Passwords": {
+      "AdditionalKey": ""
+    }
+  },
+  "Jwt": {
+    "Key": "",
+    "Issuer": "",
+    "Audience": "",
+    "ExpiresInHours": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
