--- a/src/TechReserveSystem.API/TechReserveSystem.API.csproj
+++ b/src/TechReserveSystem.API/TechReserveSystem.API.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\TechReserveSystem.Domain\TechReserveSystem.Domain.csproj" />
     <ProjectReference Include="..\TechReserveSystem.Application\TechReserveSystem.Application.csproj" />
+    <ProjectReference Include="..\Shared\TechReserveSystem.Shared.Communication\TechReserveSystem.Shared.Communication.csproj" />
+    <ProjectReference Include="..\Shared\TechReserveSystem.Shared.Exceptions\TechReserveSystem.Shared.Exceptions.csproj" />
   </ItemGroup>
 
 </Project>
