--- a/src/TechReserveSystem.Application/TechReserveSystem.Application.csproj
+++ b/src/TechReserveSystem.Application/TechReserveSystem.Application.csproj
@@ -2,6 +2,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TechReserveSystem.Domain\TechReserveSystem.Domain.csproj" />
+    <ProjectReference Include="..\Shared\TechReserveSystem.Shared.Exceptions\TechReserveSystem.Shared.Exceptions.csproj" />
+    <ProjectReference Include="..\Shared\TechReserveSystem.Shared.Communication\TechReserveSystem.Shared.Communication.csproj" />
   </ItemGroup>
 
   <ItemGroup>
