--- a/src/Shared/TechReserveSystem.Shared.Exceptions/TechReserveSystem.Shared.Exceptions.csproj
+++ b/src/Shared/TechReserveSystem.Shared.Exceptions/TechReserveSystem.Shared.Exceptions.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+   <ItemGroup>
+   <Compile Update="Resources.ResourceMessagesException.Designer.cs">
+     <DesignTime>True</DesignTime>
+     <AutoGen>True</AutoGen>
+     <DependentUpon>ResourceMessagesException.resx</DependentUpon>
+   </Compile>
+ </ItemGroup>
+
+ <ItemGroup>
+   <EmbeddedResource Update="Resources.ResourceMessagesException.resx">
+     <Generator>PublicResXFileCodeGenerator</Generator>
+     <LastGenOutput>ResourceMessagesException.Designer.cs</LastGenOutput>
+   </EmbeddedResource>
+ </ItemGroup>
+
 </Project>
