--- a/src/TechReserveSystem.API/TechReserveSystem.API.csproj
+++ b/src/TechReserveSystem.API/TechReserveSystem.API.csproj
@@ -13,10 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TechReserveSystem.Domain\TechReserveSystem.Domain.csproj" />
     <ProjectReference Include="..\TechReserveSystem.Application\TechReserveSystem.Application.csproj" />
     <ProjectReference Include="..\Shared\TechReserveSystem.Shared.Communication\TechReserveSystem.Shared.Communication.csproj" />
     <ProjectReference Include="..\Shared\TechReserveSystem.Shared.Exceptions\TechReserveSystem.Shared.Exceptions.csproj" />
+    <ProjectReference Include="..\TechReserveSystem.Infrastructure\TechReserveSystem.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
