--- a/src/Shared/TechReserveSystem.Shared.Exceptions/TechReserveSystem.Shared.Exceptions.csproj
+++ b/src/Shared/TechReserveSystem.Shared.Exceptions/TechReserveSystem.Shared.Exceptions.csproj
@@ -7,17 +7,17 @@
   </PropertyGroup>
 
    <ItemGroup>
-   <Compile Update="Resources.ResourceMessagesException.Designer.cs">
+   <Compile Update="Resources/ResourceMessagesException.Designer.cs">
      <DesignTime>True</DesignTime>
      <AutoGen>True</AutoGen>
-     <DependentUpon>ResourceMessagesException.resx</DependentUpon>
+     <DependentUpon>Resources/ResourceMessagesException.resx</DependentUpon>
    </Compile>
  </ItemGroup>
 
  <ItemGroup>
-   <EmbeddedResource Update="Resources.ResourceMessagesException.resx">
+   <EmbeddedResource Update="Resources/ResourceMessagesException.resx">
      <Generator>PublicResXFileCodeGenerator</Generator>
-     <LastGenOutput>ResourceMessagesException.Designer.cs</LastGenOutput>
+     <LastGenOutput>Resources/ResourceMessagesException.Designer.cs</LastGenOutput>
    </EmbeddedResource>
  </ItemGroup>
 
