feat(Shared):add TechReserveSystem.Shared  references

--- a/src/TechReserveSystem.API/TechReserveSystem.API.csproj
+++ b/src/TechReserveSystem.API/TechReserveSystem.API.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\Shared\TechReserveSystem.Shared.Communication\TechReserveSystem.Shared.Communication.csproj" />
     <ProjectReference Include="..\Shared\TechReserveSystem.Shared.Exceptions\TechReserveSystem.Shared.Exceptions.csproj" />
     <ProjectReference Include="..\TechReserveSystem.Infrastructure\TechReserveSystem.Infrastructure.csproj" />
+    <ProjectReference Include="..\TechReserveSystem.Shared\TechReserveSystem.Shared.csproj" />
   </ItemGroup>
 
 </Project>
