--- a/src/TechReserveSystem.Shared/TechReserveSystem.Shared.csproj
+++ b/src/TechReserveSystem.Shared/TechReserveSystem.Shared.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="Resources/ResourceAppMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources/**/*.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  
 </Project>
